--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .node_modules
+node_modules
 .DS_Store
-
+scripts/*.js
+styles/*.css
 
 # Created by https://www.gitignore.io/api/phpstorm
 # Edit at https://www.gitignore.io/?templates=phpstorm
